# Document-Clusterer

./: Makefile  README.md  cleaning.py  model.py  mypy.ini  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
data/sample/: story1.txt  story2.txt
document_clusterer/: __init__.py  cleaning.py  cli.py  model.py  types.py
notebooks/: Document_Clusterer_Demo.ipynb
tests/: test_cleaning.py  test_model.py
