[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "document-clusterer"
version = "0.1.0"
description = "Utilities for cleaning and clustering CNN stories"
readme = "README.md"
authors = [{name = "Document Clusterer Maintainers"}]
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "numpy==1.26.4",
    "scipy==1.11.4",
    "nltk==3.8.1",
]

[project.scripts]
document-clusterer = "document_clusterer.cli:main"
document-clusterer-clean = "document_clusterer.cli:clean_cli"
document-clusterer-cluster = "document_clusterer.cli:cluster_cli"

[tool.setuptools]
package-dir = {"" = "."}
packages = ["document_clusterer"]
