[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "document-clusterer"
version = "0.1.0"
description = "Utilities for cleaning and clustering CNN stories"
readme = "README.md"
authors = [{name = "Document Clusterer Maintainers"}]
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "numpy==1.26.4",
    "scipy==1.11.4",
    "nltk==3.8.1",
    "sentence-transformers==2.7.0",
    "scikit-learn==1.4.2",
    "hdbscan==0.8.38.post1",
    "umap-learn==0.5.6",
]

[project.scripts]
document-clusterer = "document_clusterer.cli:main"
document-clusterer-clean = "document_clusterer.cli:clean_cli"
document-clusterer-cluster = "document_clusterer.cli:cluster_cli"

[project.optional-dependencies]
dev = [
    "mypy>=1.10.0",
    "pytest>=8.2.0",
    "ruff>=0.6.1",
]

[tool.setuptools]
package-dir = {"" = "."}
packages = ["document_clusterer"]

[tool.ruff]
line-length = 120
target-version = "py310"
src = ["document_clusterer", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
